--- a/.github/workflows/update-repos.yml
+++ b/.github/workflows/update-repos.yml
@@ -2,8 +2,8 @@ name: Update Recent Projects
 
 on:
   schedule:
-    - cron: '0 0 * * *' # daily at midnight
-  workflow_dispatch:     # manual trigger
+    - cron: "0 0 * * *" # daily at midnight
+  workflow_dispatch: # manual trigger
 
 jobs:
   update-readme:
@@ -23,11 +23,11 @@ jobs:
           sed -i '/<!-- AUTO-GENERATED: Use GitHub API -->/,/<!-- AUTO-GENERATED: END -->/c\<!-- AUTO-GENERATED: Use GitHub API -->\n'"$(cat RECENT_PROJECTS.md)"'\n<!-- AUTO-GENERATED: END -->' README.md
 
       - name: Commit & Push
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        run: |
-          git config --local user.email "github-actions[bot]@users.noreply.github.com"
-          git config --local user.name "github-actions[bot]"
-          git add README.md
-          git commit -m "Update recent projects" || echo "No changes to commit"
-          git push https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com/${{ github.repository }} HEAD:main
+  run: |
+    git config --local user.email "github-actions[bot]@users.noreply.github.com"
+    git config --local user.name "github-actions[bot]"
+    git add README.md
+    git commit -m "Update recent projects" || echo "No changes to commit"
+    git push origin HEAD:main
+  env:
+    GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
