--- a/.github/workflows/update-repos.yml
+++ b/.github/workflows/update-repos.yml
@@ -3,7 +3,7 @@ name: Update Recent Projects
 on:
   schedule:
     - cron: "0 0 * * *" # daily at midnight
-  workflow_dispatch: # manual trigger
+  workflow_dispatch:     # manual trigger
 
 jobs:
   update-readme:
@@ -20,14 +20,14 @@ jobs:
 
       - name: Update README.md
         run: |
-          sed -i '/<!-- AUTO-GENERATED: Use GitHub API -->/,/<!-- AUTO-GENERATED: END -->/c\<!-- AUTO-GENERATED: Use GitHub API -->\n'"$(cat RECENT_PROJECTS.md)"'\n<!-- AUTO-GENERATED: END -->' README.md
+          awk 'BEGIN{flag=1} /<!-- AUTO-GENERATED: Use GitHub API -->/{print; system("cat RECENT_PROJECTS.md"); flag=0; next} /<!-- AUTO-GENERATED: END -->/{flag=1} flag{print}' README.md > temp && mv temp README.md
 
       - name: Commit & Push
-  run: |
-    git config --local user.email "github-actions[bot]@users.noreply.github.com"
-    git config --local user.name "github-actions[bot]"
-    git add README.md
-    git commit -m "Update recent projects" || echo "No changes to commit"
-    git push origin HEAD:main
-  env:
-    GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        run: |
+          git config --local user.email "github-actions[bot]@users.noreply.github.com"
+          git config --local user.name "github-actions[bot]"
+          git add README.md
+          git commit -m "Update recent projects" || echo "No changes to commit"
+          git push origin HEAD:main
