Initial profile README + workflow

--- a/.github/workflows/update-repos.yml
+++ b/.github/workflows/update-repos.yml
@@ -3,7 +3,7 @@ name: Update Recent Projects
 on:
   schedule:
     - cron: "0 0 * * *" # daily at midnight
-  workflow_dispatch:     # manual trigger
+  workflow_dispatch: # manual trigger
 
 jobs:
   update-readme:
@@ -13,21 +13,27 @@ jobs:
       - name: Checkout Profile Repo
         uses: actions/checkout@v3
 
+      - name: Install jq
+        run: sudo apt-get install -y jq
+
       - name: Fetch Latest 5 Repos
         run: |
-          curl -s https://api.github.com/users/Rajgohel0312/repos?sort=updated&per_page=5 \
-          | jq -r '.[] | "<b>🔹 <a href=\"\(.html_url)\">\(.name)</a></b> - \(.description // "No description") ⭐ \(.stargazers_count) | 🍴 \(.forks_count) <br/>"' > RECENT_PROJECTS.md
+          curl -s https://api.github.com/users/Rajgohel0312/repos?per_page=100 \
+          | jq -r '. | sort_by(.updated_at) | reverse | .[0:10] | .[] | select(.name != "Rajgohel0312") | "<b>🔹 <a href=\"\(.html_url)\">\(.name)</a></b> - \(.description // "No description") ⭐ \(.stargazers_count) | 🍴 \(.forks_count) <br/>"' > RECENT_PROJECTS.md
+
+      - name: Debug: Show Fetched Repos
+        run: cat RECENT_PROJECTS.md
 
       - name: Update README.md
         run: |
-          awk 'BEGIN{flag=1} /<!-- AUTO-GENERATED: Use GitHub API -->/{print; system("cat RECENT_PROJECTS.md"); flag=0; next} /<!-- AUTO-GENERATED: END -->/{flag=1} flag{print}' README.md > temp && mv temp README.md
+          sed -i '/<!-- AUTO-GENERATED: Use GitHub API -->/,/<!-- AUTO-GENERATED: END -->/c\<!-- AUTO-GENERATED: Use GitHub API -->\n'"$(cat RECENT_PROJECTS.md)"'\n<!-- AUTO-GENERATED: END -->' README.md
 
       - name: Commit & Push
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
           git config --local user.email "github-actions[bot]@users.noreply.github.com"
           git config --local user.name "github-actions[bot]"
           git add README.md
           git commit -m "Update recent projects" || echo "No changes to commit"
-          git push origin HEAD:main
+          git push
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
