--- a/.github/workflows/update-repos.yml
+++ b/.github/workflows/update-repos.yml
@@ -13,6 +13,9 @@ jobs:
       - name: Checkout Repo
         uses: actions/checkout@v3
 
+      - name: Install jq
+        run: sudo apt-get update && sudo apt-get install -y jq
+        
       - name: Fetch Latest 5 Repos
         run: |
           echo "Fetching latest 5 repos..."
