--- a/.github/workflows/update-repos.yml
+++ b/.github/workflows/update-repos.yml
@@ -50,10 +50,23 @@ jobs:
       - name: Update README.md
         run: |
           echo "Updating README.md with latest projects..."
+          # Read projects content
+          PROJECTS=$(cat RECENT_PROJECTS.md)
+
+          # Escape backslashes and slashes for sed
+          PROJECTS_ESCAPED=$(printf '%s\n' "$PROJECTS" | sed -e 's/[\/&]/\\&/g')
+
+          # Replace between markers or append if missing
           if grep -q "<!-- AUTO-GENERATED: Use GitHub API -->" README.md; then
-            sed -i '/<!-- AUTO-GENERATED: Use GitHub API -->/,/<!-- AUTO-GENERATED: END -->/c\<!-- AUTO-GENERATED: Use GitHub API -->\n'"$(cat RECENT_PROJECTS.md | sed 's/[&/\]/\\&/g')"'\n<!-- AUTO-GENERATED: END -->' README.md
+            # Replace content between markers
+            awk -v repl="$PROJECTS_ESCAPED" '
+              BEGIN {p=1}
+              /<!-- AUTO-GENERATED: Use GitHub API -->/ {print; print repl; getline; while ($0 !~ /<!-- AUTO-GENERATED: END -->/) getline; print; next}
+              {print}
+            ' README.md > README.tmp && mv README.tmp README.md
           else
-            echo -e "\n<!-- AUTO-GENERATED: Use GitHub API -->\n$(cat RECENT_PROJECTS.md | sed 's/[&/\]/\\&/g')\n<!-- AUTO-GENERATED: END -->" >> README.md
+            # Append at the end
+            echo -e "\n<!-- AUTO-GENERATED: Use GitHub API -->\n$PROJECTS_ESCAPED\n<!-- AUTO-GENERATED: END -->" >> README.md
           fi
           echo "Updated README.md content:"
           cat README.md
