--- a/.github/workflows/update-repos.yml
+++ b/.github/workflows/update-repos.yml
@@ -15,21 +15,22 @@ jobs:
       - name: Setup jq
         run: sudo apt-get update && sudo apt-get install -y jq
 
-      - name: Generate Stylish Project Cards
+      - name: Generate Stylish Recent Projects
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
           echo "<p align='center'><table><tr>" > RECENT_PROJECTS.md
 
-          # Fetch repos
           REPOS_JSON=$(curl -s -H "Authorization: token $GITHUB_TOKEN" "https://api.github.com/users/Rajgohel0312/repos?sort=updated&per_page=5")
 
-          # Generate cards
           echo "$REPOS_JSON" | jq -r '
             if type=="array" then
-              .[] | "<td align=\"center\" style=\"padding:10px; margin:5px; border:1px solid #ddd; border-radius:10px; width:220px; vertical-align:top;\"><b><a href=\"" + .html_url + "\">" + .name + "</a></b><br>" +
-              (if .description then (.description[0:80] + if (.description|length>80) then "…" else "" end) else "No description" end) +
-              "<br><img src=\"https://img.shields.io/badge/" + (.language // "N/A") + "-blue?style=flat-square\"> <br> ⭐ " + (.stargazers_count|tostring) + " | 🍴 " + (.forks_count|tostring) + "</td>"
+              .[] |
+              "<td align=\"center\" style=\"padding:10px; margin:5px; border-radius:10px; width:180px; vertical-align:top;\"><b><a href=\"" + .html_url + "\">" + .name + "</a></b><br>" +
+              (if .description then (.description[0:60] + if (.description|length>60) then "…" else "" end) else "No description" end) +
+              "<br><img src=\"https://img.shields.io/badge/" + (.language // "N/A") + "-blue?style=for-the-badge&logoColor=white\"/><br>" +
+              "<img src=\"https://img.shields.io/badge/⭐-" + (.stargazers_count|tostring) + "-yellow?style=for-the-badge\"/>" +
+              "<img src=\"https://img.shields.io/badge/🍴-" + (.forks_count|tostring) + "-blue?style=for-the-badge\"/></td>"
             else
               "<td align=\"center\">Error fetching repos</td>"
             end
