--- a/.github/workflows/update-repos.yml
+++ b/.github/workflows/update-repos.yml
@@ -13,7 +13,7 @@ jobs:
       - uses: actions/checkout@v3
 
       - name: Setup jq
-        run: sudo apt-get update && sudo apt-get install -y jq
+        run: sudo apt-get update && sudo apt-get install -y jq curl
 
       - name: Generate Stylish Project Cards
         env:
@@ -24,21 +24,29 @@ jobs:
           REPOS_JSON=$(curl -s -H "Authorization: token $GITHUB_TOKEN" "https://api.github.com/users/Rajgohel0312/repos?sort=updated&per_page=5")
 
           echo "$REPOS_JSON" | jq -r '
-            if type=="array" then
+            if type == "array" then
               .[] |
-              "<td align=\"center\" style=\"padding:15px; margin:10px; border-radius:15px; width:200px; vertical-align:top; background:#0d1117; box-shadow:0 4px 10px rgba(0,0,0,0.2); border:1px solid rgba(255,255,255,0.1); transition:all 0.3s ease;\">
-                <a href=\"" + .html_url + "\" style=\"text-decoration:none; color:#58a6ff;\">
-                  <b style=\"font-size:16px;\">" + .name + "</b>
-                </a><br>
-                <p style=\"font-size:13px; color:#c9d1d9; margin:6px 0;\">" +
-                  (if .description then (.description[0:60] + if (.description|length>60) then "…" else "" end) else "No description" end) +
-                "</p>
-                <img src=\"https://img.shields.io/badge/" + (.language // "N/A") + "-blue?style=for-the-badge&logoColor=white\"/><br>
-                <img src=\"https://img.shields.io/badge/⭐-" + (.stargazers_count|tostring) + "-yellow?style=flat-square\"/> 
-                <img src=\"https://img.shields.io/badge/🍴-" + (.forks_count|tostring) + "-blue?style=flat-square\"/>
-              </td>"
+              "<td align=\"center\" style=\"" +
+                "width:220px; padding:18px; margin:10px; border-radius:18px; " +
+                "background:linear-gradient(145deg,#0d1117,#161b22); " +
+                "box-shadow:0 4px 12px rgba(0,0,0,0.25); " +
+                "border:1px solid rgba(255,255,255,0.08); " +
+                "vertical-align:top; transition:transform 0.3s ease, box-shadow 0.3s ease;\">" +
+
+                "<a href=\"" + .html_url + "\" style=\"text-decoration:none; color:#58a6ff;\">" +
+                  "<b style=\"font-size:16px;\">" + .name + "</b>" +
+                "</a><br>" +
+
+                "<p style=\"font-size:13px; color:#c9d1d9; margin:6px 0;\">" +
+                  (if .description then (.description[0:60] + (if (.description|length>60) then "…" else "" end)) else "No description" end) +
+                "</p>" +
+
+                "<img src=\"https://img.shields.io/badge/" + (.language // "N/A") + "-blue?style=for-the-badge&logoColor=white\"/><br>" +
+                "<img src=\"https://img.shields.io/badge/⭐-" + (.stargazers_count|tostring) + "-yellow?style=flat-square\"/> " +
+                "<img src=\"https://img.shields.io/badge/🍴-" + (.forks_count|tostring) + "-blue?style=flat-square\"/>" +
+              "</td>"
             else
-              "<td align=\"center\">Error fetching repos</td>"
+              "<td align=\"center\">⚠️ Error fetching repos</td>"
             end
           ' >> RECENT_PROJECTS.md
 
@@ -47,18 +55,21 @@ jobs:
       - name: Update README.md
         shell: bash
         run: |
-          # If README already contains generated section, delete it first
-          if grep -q "<!-- AUTO-GENERATED: Use GitHub API -->" README.md; then
-            sed -i '/<!-- AUTO-GENERATED: Use GitHub API -->/,/<!-- AUTO-GENERATED: END -->/d' README.md
-          fi
+          # Remove old generated section (if any)
+          sed -i '/<!-- AUTO-GENERATED: Use GitHub API -->/,/<!-- AUTO-GENERATED: END -->/d' README.md
 
-          # Add the new project section
-          {
-            echo ""
-            echo "<!-- AUTO-GENERATED: Use GitHub API -->"
-            cat RECENT_PROJECTS.md
-            echo "<!-- AUTO-GENERATED: END -->"
-          } >> README.md
+          # Insert the new section right after "## 🏆 Recent Projects"
+          awk -v block="$(cat RECENT_PROJECTS.md)" '
+            /^## 🏆 Recent Projects/ {
+              print
+              print ""
+              print "<!-- AUTO-GENERATED: Use GitHub API -->"
+              print block
+              print "<!-- AUTO-GENERATED: END -->"
+              next
+            }
+            { print }
+          ' README.md > README.tmp && mv README.tmp README.md
 
       - name: Commit & Push
         run: |
@@ -66,6 +77,6 @@ jobs:
           git config --local user.name "github-actions[bot]"
           git add README.md
           git commit -m "✨ Update stylish recent projects" || echo "No changes"
-          git push origin HEAD:main --force
+          git push origin HEAD:main
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
